{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 220,
  "lineage": "25ad9c5f-4e8c-6d14-6a34-89bfd072c58f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:loadbalancer/app/test-lb-tf/1586467955f35f6c",
            "arn_suffix": "app/test-lb-tf/1586467955f35f6c",
            "dns_name": "test-lb-tf-2022438306.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:loadbalancer/app/test-lb-tf/1586467955f35f6c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0f2b33ab67bd610a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a493add6babf21f2"
              },
              {
                "subnet_id": "subnet-0dc638853c9be267d"
              }
            ],
            "subnets": [
              "subnet-0a493add6babf21f2",
              "subnet-0dc638853c9be267d"
            ],
            "vpc_id": "vpc-071ba2124d5e25ca6",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "LUIT_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:internet-gateway/igw-0bcf0bd46dbdd345c",
            "id": "igw-0bcf0bd46dbdd345c",
            "owner_id": "898213690112",
            "tags": {
              "Name": "LUIT internet gateway"
            },
            "tags_all": {
              "Name": "LUIT internet gateway"
            },
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "dependencies": [
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LUIT_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:loadbalancer/app/tf-lb-20221126204354239100000004/1e25e59eefd8a7d7",
            "arn_suffix": "app/tf-lb-20221126204354239100000004/1e25e59eefd8a7d7",
            "dns_name": "tf-lb-20221126204354239100000004-40858965.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:loadbalancer/app/tf-lb-20221126204354239100000004/1e25e59eefd8a7d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20221126204354239100000004",
            "security_groups": [
              "sg-07fcadad488d17a7c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a493add6babf21f2"
              },
              {
                "subnet_id": "subnet-0dc638853c9be267d"
              }
            ],
            "subnets": [
              "subnet-0a493add6babf21f2",
              "subnet-0dc638853c9be267d"
            ],
            "tags": {
              "Name": "LUIT_lb"
            },
            "tags_all": {
              "Name": "LUIT_lb"
            },
            "vpc_id": "vpc-071ba2124d5e25ca6",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:listener/app/test-lb-tf/1586467955f35f6c/7ed1b93af1019f5f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:targetgroup/target-group/64fa8cd955b633e2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:listener/app/test-lb-tf/1586467955f35f6c/7ed1b93af1019f5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:loadbalancer/app/test-lb-tf/1586467955f35f6c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:targetgroup/target-group/64fa8cd955b633e2",
            "arn_suffix": "targetgroup/target-group/64fa8cd955b633e2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:898213690112:targetgroup/target-group/64fa8cd955b633e2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "dependencies": [
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:security-group/sg-0f2b33ab67bd610a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2b33ab67bd610a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221126204352572200000003",
            "name_prefix": "terraform-",
            "owner_id": "898213690112",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:security-group/sg-0159f18c7921fb78e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0159f18c7921fb78e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f2b33ab67bd610a2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221126205633669100000001",
            "name_prefix": "terraform-",
            "owner_id": "898213690112",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:subnet/subnet-0c2731b7be78f4923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c2731b7be78f4923",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898213690112",
            "tags": {
              "Name": "private subnet 1"
            },
            "tags_all": {
              "Name": "private subnet 1"
            },
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "dependencies": [
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:subnet/subnet-0a493add6babf21f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a493add6babf21f2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898213690112",
            "tags": {
              "Name": "public subnet 1"
            },
            "tags_all": {
              "Name": "public subnet 1"
            },
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "dependencies": [
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:subnet/subnet-0dc638853c9be267d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0dc638853c9be267d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898213690112",
            "tags": {
              "Name": "public subnet 2"
            },
            "tags_all": {
              "Name": "public subnet 2"
            },
            "vpc_id": "vpc-071ba2124d5e25ca6"
          },
          "dependencies": [
            "aws_vpc.LUIT_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LUIT_terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:898213690112:vpc/vpc-071ba2124d5e25ca6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085e916b886544206",
            "default_route_table_id": "rtb-059abe97d70418eaa",
            "default_security_group_id": "sg-07fcadad488d17a7c",
            "dhcp_options_id": "dopt-0a0630ad1421e2ccb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-071ba2124d5e25ca6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-059abe97d70418eaa",
            "owner_id": "898213690112",
            "tags": {
              "Name": "LUIT terraform vpc"
            },
            "tags_all": {
              "Name": "LUIT terraform vpc"
            }
          }
        }
      ]
    }
  ]
}